# uncertain-feedback

./: .gitignore  .gitmodules  .pylintrc  README.md  SESSION_2026-04-14.md  pyproject.toml  run_autoformat.sh  run_ci_checks.sh
.github/workflows/: ci.yml
src/uncertain_feedback/: consts.py
src/uncertain_feedback/data_collection/: __init__.py  _mhr_inference_worker.py  _mhr_inference_worker_conversion.py  build_mdm_dataset.py  extract_all_frames.py  labeler.py  main.py  mhr_pose_estimator.py  mhr_to_hml263_pipeline.py  run_mhr_demo.py  show_conversion.py  smpl_to_hml263.py  video_to_frames.py  viz.py
src/uncertain_feedback/data_collection/demo/: smpl_out.npz
src/uncertain_feedback/data_collection/demo/video_frames/: labels copy.json  labels.json
src/uncertain_feedback/data_collection/demo/video_frames/IMG_3062/: meta.json
src/uncertain_feedback/data_collection/demo/video_frames_old/IMG_3055/: meta.json
src/uncertain_feedback/data_collection/trajectory_editor/: hml_decode.py  server.py
src/uncertain_feedback/data_collection/trajectory_editor/static/: editor.js  index.html
src/uncertain_feedback/llm/: __init__.py  base_model.py  openai_model.py
src/uncertain_feedback/motion_generators/mdm/: create_tpose.py  demo_final_pose.pt  demo_pose.pt  demo_pose2.pt  demo_pose_end1.pt  demo_pose_end2.pt  hml_smpl_conversion.py  make_initial_pose.py  mdm_api.py  mdm_parser_util.py  sample_leftarm.py  sitting_pose.pt  t_pose.pt  train_leftarm.py  visualize_sitting_pose.py
src/uncertain_feedback/motion_generators/mdm/mdm_configs/: mdm_config.yaml
src/uncertain_feedback/planners/: run.py
src/uncertain_feedback/planners/mpc/: __init__.py  arm_mpc.py  arm_mpc_mdm.py  arm_mpc_mdm_uq.py  kinematics.py  visualizer.py
src/uncertain_feedback/uncertainty/: __init__.py  base.py  cluster_picker.py  xyz_clusterer.py
tests/: test_hml_to_smpl.py  test_placeholder.py
