[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "uncertain_feedback"
version = "0.1.0"
description = "An example of how to structure research code."
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
   "matplotlib>=3.5,<3.6",
   "pyqt5",
   "numpy<1.24",
   "pandas",
   "pandas-stubs",
   "hydra-core",
   "omegaconf",
   # MDM dependencies
   "torch>=2.1.0",
   "torchvision>=0.16.0",
   "torchaudio>=2.1.0",
   "scipy",
   "scikit-learn",
   "h5py",
   "spacy>=3.4,<3.5",
   "en-core-web-sm@https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0.tar.gz",
   "trimesh",
   "smplx",
   "chumpy",
   "ftfy",
   "regex",
   "lxml",
   "moviepy<2",
   "tqdm",
   "pybullet",
   "wandb",
   "transformers",
   "openai-clip",
   "pydantic>=1.9,<2",
   "pyquaternion",
   "gdown",
   "setuptools<70",
]

[project.optional-dependencies]
develop = [
    "black",
    "docformatter",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pytest>=7.2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
uncertain_feedback = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
py_version = 310
profile = "black"
multi_line_output = 2
skip_glob = ["venv/*"]
split_on_trailing_comma = true

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
exclude = ["venv/*"]

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "mpl_toolkits.*",
    "scipy.*",
    "data_loaders.*",
    "sample.*",
    "utils.*",
]
ignore_missing_imports = true

[tool.uv]
extra-build-dependencies = { chumpy = ["pip"] }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
